--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.1",
+    "@primeng/themes": "^19.0.9",
+    "chart.js": "^4.4.8",
     "express": "^4.18.2",
+    "gsap": "^3.12.7",
+    "localstorage-polyfill": "^1.0.1",
+    "primeflex": "^4.0.0",
+    "primeng": "^19.0.9",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
